kube-manifests/GolangRestfulPractice-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-golang-practice-deployment
  labels:
    app: golang-rest-test
spec:
  replicas: 4
  selector:
    matchLabels:
      app: golang-rest-test
  template:
    metadata:
      labels:
        app: golang-rest-test
    spec:
      containers:
        - name: app-tonyjhang-golang-restful-practice
          image: {your registry}/golangrestfulpractice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
