kube-manifests/GolangRestfulPractice-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-golang-practice-service
  labels: 
    app: golang-rest-test
spec:
  type: ClusterIP
  selector:
    app: golang-rest-test
  ports:
    - port: 8888
      nodePort: 32000
      targetPort: 8888
