kube-manifests/GolangRestfulPractice-Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app-golang-practice-ingress
spec:
  rules:
    - host : "*"
      http:
        paths:
          - path: /
            backend:
            serviceName: app-golang-practice-service
            servicePort: 8888
